# tracftec_ros

./: .gitmodules  README.md  justfile  sync_justfile.sh
tracftec_description/: .gitignore  CMakeLists.txt  package.xml
tracftec_description/config/: gazebo_ros2_control.yaml
tracftec_description/env-hooks/: tracftec_description.dsv.in
tracftec_description/launch/: display.launch.py  robot_state_publisher.launch.py
tracftec_description/meshes/: .gitignore  base.stl  find_origins.py  left_caster_pivot.stl  left_caster_wheel.stl  left_wheel.stl  origins.csv  right_caster_pivot.stl  right_caster_wheel.stl  right_wheel.stl
tracftec_description/rviz/: display.rviz
tracftec_description/urdf/: base.urdf.xacro  ground_truth.urdf.xacro  imu.urdf.xacro  inertial_macros.urdf.xacro  left_caster.urdf.xacro  left_wheel.urdf.xacro  mid360.urdf.xacro  right_caster.urdf.xacro  right_wheel.urdf.xacro  ros2_control.urdf.xacro  tracftec.urdf.xacro  trafctec.urdf.xacro  trafctec_core.urdf.xacro
