<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracftec_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joefscholtz@gmail.com">joe</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>ros2_livox_simulation</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}/meshes" />
    <gazebo_ros gazebo_model_path="${prefix}/meshes" />
    <gazebo_ros gazebo_resource_path="${prefix}/meshes" />
    <gazebo_ros gazebo_media_path="${prefix}/meshes" />
    <gazebo_ros gazebo_model_path="${prefix}/meshes" />
    <gazebo_ros gazebo_resource_path="${prefix}/meshes" />
  </export>
</package>
